--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,14 @@
   font-family: Arial, Helvetica, sans-serif;
   
 }
+.btn{
+  background-color: darksalmon;
+  color: white;
+  border-radius: 10px;
+  cursor:pointer;
+  padding:2px 10px; 
+}
+.btn.btn-text{
+  font-family: Arial, Helvetica, sans-serif;
+  margin:0;
+}
