--- a/src/index.css
+++ b/src/index.css
@@ -23,14 +23,24 @@
   font-family: Arial, Helvetica, sans-serif;
   
 }
-.btn{
-  background-color: darksalmon;
-  color: white;
+.student-card{
+  border:1px solid hsl(0, 0%, 0%);
   border-radius: 10px;
-  cursor:pointer;
-  padding:2px 10px; 
+  box-shadow: 5px 5px 5px hsl(0, 0%, 55%);
+  padding:25px;
+  margin: 10px;
+  text-align: left;
+  max-width: 200px;
+  display:inline-block;
 }
-.btn.btn-text{
-  font-family: Arial, Helvetica, sans-serif;
-  margin:0;
+.user-greeting{
+  border:1px solid hsl(0, 0%, 0%);
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px hsl(0, 0%, 55%);
+  padding:20px;
+  margin:10px;
+  text-align: center;
+  max-width: 250px;
+  display:inline-block;
+
 }
